# brain-basic-midi2cv

./: CMakeLists.txt  README.md  brain-basic-midi2cv-pico-2.uf2  brain-basic-midi2cv-pico.uf2  brain-default-midi2cv-pico-2.uf2  brain-default-midi2cv-pico.uf2  main.cpp
src/: basic-midi2cv.cpp  basic-midi2cv.h  main.cpp
